[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainInterface.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainInterface" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="RentTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="timeout" from="RentTimer" to="." method="_on_pay_rent"]
